Gave rock paper scissors game a rework, ex. you will no longer be typing in what you will be using in tha game

--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="style.css" rel="stylesheet">
   <title>Rock Paper Scissors</title>
 </head>
 <body>
-  <p id="computer" style="text-align: center;"></p>
-  <p id="result" style="text-align: center;"></p>
-  <p style="text-align: center;">Refresh the page if you want to play again.</p>
+  <div id="game">
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    <p id="computer"></p>
+    <p id="result"></p>
+    <p>Get up to 5 points</p>
+    <div id="player-score">Player: 0</div>
+    <div id="computer-score">Computer: 0</div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
